--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/style.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/style.css
@@ -2,18 +2,18 @@
     display: none;
     position: fixed;
     bottom: 20px;
-    right: 30px;
+    right: 10%;
     z-index: 99;
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: red;
+    background-color: green;
     color: white;
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
 }
 
-#scroll-top-Btn :hover {
-    background-color: #555;
+#scroll-top-Btn:hover {
+    background-color: darkgreen;
 }
