--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
@@ -4,8 +4,7 @@
 }
 
 <h2>Information</h2>
-
-
+    <h3>Information</h3>
     <div class="container mt-5"></div>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad frm-userinformation">
@@ -65,18 +64,18 @@
                             </table>
                             <div class="row">
                                 <div class="d-flex justify-content-center col-md-6 mt-2">
-                                    @Html.ActionLink("Edit your information", "EditInformation", "UserAccount", null, new { @class = "btn btn-primary"})
+                                    @Html.ActionLink("Edit your information", "EditInformation", "UserAccount", null, new { @class = "btn btn-primary" })
                                 </div>
                                 <div class="d-flex justify-content-center col-md-6 mt-2">
                                     @Html.ActionLink("Change your password", "ChangePassword", "UserAccount", null, new { @class = "btn btn-primary" })
                                 </div>
-                                </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-            </div>
 
+            </div>
         </div>
-   
+
+    </div>
+
