not thing important

--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/TopicDetail.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/TopicDetail.cshtml
@@ -48,8 +48,12 @@
                 {
                     <div class="edit-btn">
                         <img src="~/Image/Logo_Icon/edit-48.png" class="" alt="Responsive image">
+                       <!--  get Post_ID -->
+                        @{
+                            int Post_ID = @listPost.Post_ID;
+                        }                        
                     </div>
-                }
+                            }
                 <div class="header-containt" id="topic-header-containt">
                     <div class="avt-header-containt" id="topic-avt-header-containt">
                         <img src="~/Image/Logo_Icon/avatar-50.png" class="header-avt" alt="Responsive image">
