--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
@@ -1,52 +1,58 @@
 ﻿@model Dr4rum_eProjectIII.Models.Post
-
 <!--Header-->
 <div class="modal-header">
     <h5 class="modal-title">
-        Update Post
+       @Html.TextBoxFor(model => model.Topic_Tile, new { @class = "form-control" , disabled = "disabled" })
     </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <div class="form">
-        <!-- Modal -->
+    
+    <div class="form-horizontal">
+        @*<h4>Post</h4>*@
         <div class="modal-body">
+
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <!-- Body -->
-            <div class="form-group row ">
-                @Html.LabelFor(model => model.Topic_Tile, "Topic_Tile", htmlAttributes: new { @class = "col-sm-2 col-form-label" })
+            @Html.HiddenFor(model => model.Post_ID)
+
+            <div class="form-group row invisible">
+                @Html.LabelFor(model => model.Topic_Tile, "Topic_Tile", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("Topic_Tile", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Topic_Tile, "", new { @class = "text-danger" })
                 </div>
             </div>
+
             <div class="form-group row invisible">
                 <div class="col-sm-10">
                     @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 1, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
+
             <div class="form-group">
-                    @Html.LabelFor(model => model.Post_Info, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Post_Info, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Post_Info, "", new { @class = "text-danger" })
-                    </div>
+                @Html.LabelFor(model => model.Post_Info, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Post_Info, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Post_Info, "", new { @class = "text-danger" })
+                </div>
             </div>
+
             <div class="form-group invisible">
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Like_Num, new { @Value = 0, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
+
             <div class="form-group invisible">
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Dislike_Num, new { @Value = 0, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
+
             <div class="form-group invisible">
                 <div class="col-md-10">
                     @{
@@ -56,15 +62,14 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
-        <div class="modal-footer">
-            <input type="submit" value="Update" class="btn btn-default btn-primary" />
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <!-- modal-footer -->
+            <div class="modal-footer">
+                <input type="submit" value="Save" class="btn btn-default" />
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
-    </div>
 }
-<script>
-    $("form").removeData("validator");
-    $("form").removeData("unobtrusiveValidation");
-    $.validator.unobtrusive.parse("form");
-</script>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
