--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
@@ -1,10 +1,27 @@
 ﻿@model Dr4rum_eProjectIII.Models.Post
+<style>
+    .TopicTitle {
+        background-color: darkseagreen;
+    }
 
+        .TopicTitle > h5 {
+            font-weight: bold;
+            height: auto;
+            padding-bottom: 5px !important;
+            padding-top: 5px !important;
+            padding-right: 5px !important;
+            padding-left: 5px !important;
+        }
+    .BodyTile{
+        border-bottom: 1px solid gray;
+    }
+</style>
 <!--Header-->
-<div class="modal-header">
+<div class="modal-header TopicTitle">
     <h5 class="modal-title">
         Add Post
     </h5>
+
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
@@ -15,16 +32,15 @@
     @Html.AntiForgeryToken()
     <div class="form">
         <!-- Modal -->
-        <div class="modal-body">
+        <div class="modal-body BodyTile">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <!-- Body -->
-            <div class="form-group row">
-                @Html.LabelFor(model => model.Topic_Tile, "Topic_Tile", htmlAttributes: new { @class = "col-sm-2 col-form-label" })
-                <div class="col-sm-10">
-                    @Html.DropDownList("Topic_Tile", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Topic_Tile, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            <h5 class="modal-title ">
+                @{
+                    var topicTitle = TempData["data"];
+                }
+                @Html.TextBoxFor(model => model.Topic_Tile, new { @Value = topicTitle.ToString(), htmlAttributes = new { @class = "form-control" } })
+            </h5>
 
             <div class="form-group row invisible">
                 <div class="col-sm-10">
@@ -35,7 +51,7 @@
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Post Info</label>
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Post_Info)
+                    @Html.TextAreaFor(model => model.Post_Info, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Post_Info, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -74,11 +90,4 @@
     $("form").removeData("unobtrusiveValidation");
     $.validator.unobtrusive.parse("form");
 </script>
-@section scripts{
-<script src="~/Content/ckeditor/ckeditor.js"></script>
-    <script type="text/javascript">
-        var editor = CKEDITOR.instances['Post_Info'];
-        if (editor) { editor.destroy(true); }
-        CKEDITOR.replace('Post_Info', { enterMode: CKEDITOR.ENTER_BR, });
-    </script>
-    }
+    
