--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialDelete.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialDelete.cshtml
@@ -1,69 +1,80 @@
 ﻿@model Dr4rum_eProjectIII.Models.Post
 
-<h3>Are you sure you want to delete this?</h3>
-@using (@Html.BeginForm())
+<div class="modal-header TopicTitle">
+    <h5 class="modal-title">
+        @Html.TextAreaFor(model => model.Topic_Tile, new { @class = "", disabled = "disabled" })
+    </h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <div class="modal-body">
-        <div class="form-horizontal">
-            <div class="form-group">
-                @Html.LabelFor(model => model.Topic_Tile, "Topic_Tile", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                   @Html.TextBoxFor(model => model.Topic_Tile, new { @class= "form-control required", @disabled = "disabled"})
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Acc_ID, "Acc_ID", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Acc_ID, new { @class = "form-control required", @disabled = "disabled" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Post_Info, "Post_Info", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Post_Info, new { @class = "form-control required", @disabled = "disabled" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Like_Num, "Like_Num", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Like_Num, new { @class = "form-control required", @disabled = "disabled" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Dislike_Num, "Dislike_Num", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.Dislike_Num, new { @class = "form-control required", @disabled = "disabled" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.date, "date", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.date, new { @class = "form-control required", @disabled = "disabled" })
-                </div>
-            </div>
-        </div>
-    </div>
-        <div class="modal-footer">
-            <span id="progress" class="text-center" style="display: none;">
-                <img src="~/Content/images/ajax-loader.gif" alt="wait" />
-                Wait..
-            </span>
-            <input type="submit" id="btnDelete" ct_ma="@Model.Post_ID" value="Delete" class="btn btn-default btn-primary" />
-            <button class="btn btn-warning" data-dismiss="modal">Close</button>
-        </div>
-}
-<!-- modal placeholder-->
-<div id='myModal' class='modal fade in'>
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div id='myModalContent'></div>
-        </div>
-    </div>
-</div>
+    <div class="form-horizontal">
+        <div class="modal-body">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Post_ID)
 
-<script>
-$("form").removeData("validator");
-$("form").removeData("unobtrusiveValidation");
-$.validator.unobtrusive.parse("form");
-</script>
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Post_Info)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Post_Info)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Like_Num)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Like_Num)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Dislike_Num)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Dislike_Num)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.date)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.date)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Account.UserName)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Account.UserName)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Topic.Category_Name)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Topic.Category_Name)
+                </dd>
+
+            </dl>
+
+        </div>
+        <div class="modal-footer">
+            <input type="submit" id="btnDelete" ct_ma="@Model.Post_ID" value="Delete" class="btn btn-default btn-primary" />
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+    </div>
+
+ }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
