--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
@@ -1,8 +1,17 @@
 ﻿@model Dr4rum_eProjectIII.Models.Post
+<style>
+    .TopicTitle {
+        background-color: darkseagreen;
+    }
+
+        .TopicTitle > h5 {
+            font-weight: bold
+        }
+</style>
 <!--Header-->
-<div class="modal-header">
+<div class="modal-header TopicTitle">
     <h5 class="modal-title">
-       @Html.TextBoxFor(model => model.Topic_Tile, new { @class = "form-control" , disabled = "disabled" })
+       @Html.TextAreaFor(model => model.Topic_Tile, new { @class = "" , disabled = "disabled" })
     </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
@@ -13,9 +22,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        @*<h4>Post</h4>*@
+ @*<h4>Post</h4>*@
         <div class="modal-body">
-
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Post_ID)
 
