--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialEdit.cshtml
@@ -11,7 +11,7 @@
 <!--Header-->
 <div class="modal-header TopicTitle">
     <h5 class="modal-title">
-       @Html.TextAreaFor(model => model.Topic_Tile, new { @class = "" , disabled = "disabled" })
+       @Html.TextBoxFor(model => model.Topic_Tile, new { @class = "" , disabled = "disabled" })
     </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
@@ -30,8 +30,7 @@
             <div class="form-group row invisible">
                 @Html.LabelFor(model => model.Topic_Tile, "Topic_Tile", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("Topic_Tile", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Topic_Tile, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(model => model.Topic_Tile, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
