--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/index.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/index.css
@@ -86,7 +86,6 @@ footer {
 .btn-breadcrumb {
     width: 100%;
     background-color: #fff;
-    border-radius: 4px;
     border: solid 1px #ccc;
 }
 
@@ -423,15 +422,17 @@ footer {
 #topic-containt {
     margin-top: 5px;
     margin-bottom: 0px !important;
-    position : relative;
+    position: relative;
     max-width: 100%;
 }
-.edit-btn{
+
+.edit-btn {
     position: absolute;
     top: 2%;
-    right: 0px; 
+    right: 0px;
     cursor: pointer;
 }
+
 #topic-header-containt {
     padding-top: 1%;
     justify-content: unset;
@@ -441,7 +442,6 @@ footer {
     border-right: solid 1px cornflowerblue;
     flex-basis: 12%;
     max-width: 12%;
-
 }
 
 #post-info {
@@ -454,9 +454,11 @@ footer {
     flex-basis: 83%;
     max-width: 83%;
 }
-#post-day{
+
+#post-day {
     color: black;
 }
+
 .add-post-btn {
     position: absolute;
     font-size: 24px;
@@ -592,46 +594,75 @@ footer {
 
 /* -------------------------- This code for Responsive  --------------------------*/
 /* Index page*/
+@media only screen and (max-width: 750px) {
+    .slogan-containt {
+        padding: 0px;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .slogan-containt {
+        font-size: 20px;
+    }
+}
+
 @media only screen and (max-width: 450px) {
     .img-fluid {
         width: 100%;
         height: 150px;
     }
-    .btn-breadcrumb{
+
+    .btn-breadcrumb {
         margin-left: 0px;
         width: 100%
     }
-    .btn.btn-info.c-info{
+
+    .btn.btn-info.c-info {
         display: none
     }
-    .category-icon{
+
+    .category-icon {
         display: none;
     }
+
     .category-containt {
         display: block;
     }
-    .category-title{
+
+    .category-title {
         max-width: 100%
     }
+
     .Topic-info {
         max-width: 100%;
     }
-    .category-title>p{
+
+    .category-title > p {
         font-size: 20px;
     }
+
     .num-topic {
         font-size: 12px !important;
     }
-    .alert.alert-danger{
+
+    .alert.alert-danger {
         margin-top: 30px !important;
     }
-    footer{
-        height: 100px
+}
+@media screen and (max-width: 375px) {
+    .slogan-containt {
+        font-size: 17px;
+        padding-left: 10px;
+    }
+    .footer-img {
+        margin-left: 12%;
     }
 }
-@media only screen and (max-width: 320px) {
-    .dropdown-menu {
-        width: 259px;
-        text-align: center;
+    @media only screen and (max-width: 320px) {
+        .dropdown-menu {
+            width: 259px;
+            text-align: center;
+        }
+        footer{
+            height:55px;
+        }
     }
-}
