--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -3,14 +3,19 @@
 @{
     ViewBag.Title = "Create";
 }
+<style>
+    .hide {
+        display:none
+    }
+</style>
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Topics", FormMethod.Post, new { enctype="multipart/form-data" }))
+@using (Html.BeginForm("Create", "Topics", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Topic</h4>
         <hr />
@@ -22,29 +27,29 @@
                 @Html.ValidationMessageFor(model => model.Topic_Title, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        @*gan cung id se phat sinh loi*@
         <div class="form-group">
             @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Acc_ID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Acc_ID, new { htmlAttributes = new { @class = "form-control" }})
                 @Html.ValidationMessageFor(model => model.Acc_ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Category_Name, "Category_Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Category_Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("Category_Name", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Category_Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hide">
             @Html.LabelFor(model => model.setV, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.setV)
-                    @Html.ValidationMessageFor(model => model.setV, "", new { @class = "text-danger" })
+                    @Html.CheckBoxFor(model => model.setV, new { @checked = "checked", htmlAttributes = new { @class = "form-control" } })
+                    @*@Html.ValidationMessageFor(model => model.setV, "", new { @class = "text-danger"})*@
                 </div>
             </div>
         </div>
@@ -57,18 +62,21 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hide">
             @Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Report, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Report, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.Report, new { @Value = 0, htmlAttributes = new { @class = "form-control" }, disabled = "disabled" })
+                @*@Html.ValidationMessageFor(model => model.Report, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hide">
             @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
+                @{ 
+                    DateTime currentdate = DateTime.Now;
+                }
+                @Html.TextBoxFor(model => model.date, new {@Value = currentdate, htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
