--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewBag.Title = "Edit";
 }
-
+<style>
+    .hide{
+        display: none
+    }
+</style>
 <h2>Edit</h2>
 
 
@@ -18,7 +22,15 @@
         @Html.HiddenFor(model => model.Topic_Title)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Acc_ID, "Acc_ID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Topic_Title, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <h4>@Html.DisplayFor(model => model.Topic_Title, new { @disabled = "disabled", htmlAttributes = new { @class = "form-control" } })</h4>
+            </div>
+        </div>
+
+
+        <div class="form-group hide">
+            @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Acc_ID , new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Acc_ID, "", new { @class = "text-danger" })
@@ -26,19 +38,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Category_Name, "Category_Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Category_Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("Category_Name", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Category_Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group ">
             @Html.LabelFor(model => model.setV, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.setV)
-                    @Html.ValidationMessageFor(model => model.setV, "", new { @class = "text-danger" })
+                    @Html.CheckBoxFor(model => model.setV, new { @checked = "checked", htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
         </div>
@@ -52,7 +63,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hide">
             @Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Report, new { htmlAttributes = new { @class = "form-control" } })
@@ -60,10 +71,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group hide">
             @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.date, new { htmlAttributes = new { @class = "form-control" } })
+                @{
+                    DateTime curentdate = DateTime.Now;
+                }
+                @Html.TextBoxFor(model => model.date, new { @Value = curentdate, htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
