--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Shared/_Layout.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Shared/_Layout.cshtml
@@ -55,14 +55,13 @@
                 <!-- Button Login -->
                 <div class="form-inline my-2 my-lg-0">
                     @if (Session["UserAccount"] == null)
-                    {                       
+                    {
                         <button id="btnlogin" class="my-2 my-sm-0 btn btn-outline-warning btn-login nav-link ">Login</button>
-                        <button  id="btnregister" class="my-2 my-sm-0 btn  btn-outline-light nav-link " type="submit">  @Html.ActionLink("Register", "Register", "UserAccount", null, new { @class = "" })</button>
+                        <button id="btnregister" class="my-2 my-sm-0 btn  btn-outline-light nav-link " type="submit">  @Html.ActionLink("Register", "Register", "UserAccount", null, new { @class = "" })</button>
                     }
                     else
                     {
-
-                        <div class="nav-link disabled">Hello : @Html.ActionLink(@account.UserName.ToString(), "Information", "UserAccount")</div>
+                        <div>@Html.ActionLink("Hello : " + account.UserName.ToString(), "Information", "UserAccount",new { ID = account.Acc_ID.ToString()} ,new { @class = "nav-link" })</div>
                         <div class="nav-link"> @Html.ActionLink("Logout", "Logout", "UserAccount")</div>
                     }
                 </div>
