--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminIndex/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminIndex/Index.cshtml
@@ -13,9 +13,9 @@
 <!-- breadcrumb-->
 <div class="breadcrumb-containt">
     <div class="btn-group btn-breadcrumb breadcrumb-primary">
-        <a href="@Url.Action("Index", "AdminIndex")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
-        <div class="btn btn-info c-info">
-            @Html.ActionLink("Home", "Index", "AdminIndex", new { @class = "breadcrumb-link" })
+        <a href="#" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        <div class="btn btn-info c-info breadcrumb-link">
+            Home
         </div>
     </div>
 </div>
